--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,4 @@ services:
       DB_CLIENT: "sqlite3"
       DB_FILENAME: "/directus/database/data.db"
       WEBSOCKETS_ENABLED: "true"
-      CORS_ENABLED: "true"
-      CORS_ORIGIN: "true"
+      CORS_ENABLED: "false"
