--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,17 @@ services:
     ports:
       - 8055:8055
     volumes:
-      - ./database:/directus/database
-      - ./uploads:/directus/uploads
-      - ./extensions:/directus/extensions
+      - ${WEBAPP_STORAGE_HOME}/uploads:/directus/uploads
+      - ${WEBAPP_STORAGE_HOME}/extensions:/directus/extensions
     environment:
-      KEY: "replace-with-random-value"
-      SECRET: "replace-with-random-value"
+      KEY: "811cd6cd5ea0dede236a796a1d736d37"
+      SECRET: "abe3ae2344d56df22c06565adad11fc6"
       ADMIN_EMAIL: "admin@example.com"
       ADMIN_PASSWORD: "d1r3ctu5"
-      DB_CLIENT: "sqlite3"
-      DB_FILENAME: "/directus/database/data.db"
-      WEBSOCKETS_ENABLED: "true"
+      DB_CLIENT: "pg"
+      DB_HOST: "project-cabe-cms.postgres.database.azure.com"
+      DB_PORT: 5432
+      DB_DATABASE: "postgres"
+      DB_USER: "dbadmin"
+      DB_PASSWORD: "GarBear!!!"
+      WEBSOCKETS_ENABLED: true
