--- a/template/src/settings.json
+++ b/template/src/settings.json
@@ -1,55 +1,9 @@
 {
-  "id": 1,
-  "project_name": "Project: CABE",
-  "project_url": null,
+  "id": null,
+  "project_name": "Directus",
   "project_color": "#6644FF",
-  "project_logo": null,
-  "public_foreground": null,
-  "public_background": null,
-  "public_note": null,
   "auth_login_attempts": 25,
-  "auth_password_policy": null,
   "storage_asset_transform": "all",
-  "storage_asset_presets": null,
-  "custom_css": null,
-  "storage_default_folder": null,
-  "basemaps": null,
-  "mapbox_key": null,
-  "module_bar": [
-    {
-      "type": "module",
-      "id": "insights",
-      "enabled": true
-    },
-    {
-      "type": "module",
-      "id": "content",
-      "enabled": true
-    },
-    {
-      "type": "module",
-      "id": "users",
-      "enabled": true
-    },
-    {
-      "type": "module",
-      "id": "files",
-      "enabled": true
-    },
-    {
-      "type": "module",
-      "id": "settings",
-      "enabled": true,
-      "locked": true
-    }
-  ],
-  "project_descriptor": null,
   "default_language": "en-US",
-  "custom_aspect_ratios": null,
-  "public_favicon": null,
-  "default_appearance": "auto",
-  "default_theme_light": null,
-  "theme_light_overrides": null,
-  "default_theme_dark": null,
-  "theme_dark_overrides": null
+  "default_appearance": "auto"
 }
